--- a/about.html
+++ b/about.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>About - KentuckyHawk</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/about"/>
+    <meta property="og:title" content="About - KentuckyHawk"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/about"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/about" hreflang="x-default"/>
+    <meta name="description" content="Wanna know more about me? cool, your at the right place!">
+    <meta property="og:description" content="Wanna know more about me? cool, your at the right place!">
     <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header>
@@ -31,8 +31,8 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
-                <li><a class="nav-link" href="/about">About</a></li>    
+                <li><a class="nav-link" href="/">Home</a></li>
+                <li><a class="nav-link active" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
                 <li><a class="nav-link" href="/projects">Projects</a></li>
                 <li><a class="nav-link" href="/modpacks">Modpacks</a></li>
@@ -43,60 +43,63 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
+        <section class="about-page">
+            <div class="about-hero">
+                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Profile Picture" class="about-profile-img">
+                <h1>About Me</h1>
+                <p class="about-tagline">Creator and Your Friend on the Internet.</p>
             </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
+            <div class="about-content-page">
+                <div class="about-story">
+                    <h2>My Story</h2>
+                    <p>Hey there! I'm KentuckyHawk, the face behind this channel. I started creating content in 2016 because I wanted to share my passion for Simulation games with the world. What began as a hobby has grown into a passion Project.</p>
+                    <p>I'm a South Eastern content creator from the United States so far I've been doing YouTube for almost a decade though my channel wouldn't really give that away since I deleted most of my older content furthermore I play a lot of games, though my expertise is in simulation but I want to expand my catalog into more games then just simulation.</p>
+                </div>
+
+                <div class="about-stats-page">
+                    <h2>By the Numbers</h2>
+                    <div class="stats-grid">
+                        <div class="stat-card">
                             <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
+                            <span class="stat-label">Subscribers</span>
                         </div>
-                        <div class="stat">
+                        <div class="stat-card">
                             <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
+                            <span class="stat-label">Videos</span>
                         </div>
-                        <div class="stat">
+                        <div class="stat-card">
                             <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
+                            <span class="stat-label">Total Views</span>
+                        </div>
+                        <div class="stat-card">
+                            <span class="stat-number">2016</span>
+                            <span class="stat-label">Creating Since</span>
                         </div>
                     </div>
                 </div>
+
+                <div class="about-content-focus">
+                    <h2>What You'll Find Here</h2>
+                    <div class="content-grid">
+                        <div class="content-item">
+                            <h3>🎥 Quality Videos</h3>
+                            <p>I work tirelessly to make my videos are great</p>
+                        </div>
+                        <div class="content-item">
+                            <h3>💬 Community First</h3>
+                            <p>Your comments and feedback shape the channel</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="about-mission">
+                    <h2>My Mission</h2>
+                    <p>I believe that my goal is to create a space where my audience can come together and have somthing fun and entertaining to enjoy.</p>
+                    <p>When I'm not creating content, you can find me play games, hanging with Friends, and listening to music, or modding for some obscure game called <a href="https://rigsofrods.org"> Rigs of Rods</a>.</p>
+                </div>
             </div>
         </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
     </main>
 
         <footer class="footer">
@@ -146,6 +149,7 @@
 
   </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
