--- a/contact.html
+++ b/contact.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>Contact - KentuckyHawk</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/contact"/>
+    <meta property="og:title" content="Contact - KentuckyHawk"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/contact"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/contact" hreflang="x-default"/>
+    <meta name="description" content="Need to get a hold of me? No problem. This page has got all my socials and every contact method you can use to get a hold of me.">
+    <meta property="og:description" content="Need to get a hold of me? No problem. This page has got all my socials and every contact method you can use to get a hold of me.">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-</head>
 <body>
     <header>
         <nav>
@@ -31,72 +30,81 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link" href="/">Home</a></li>
                 <li><a class="nav-link" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
                 <li><a class="nav-link" href="/projects">Projects</a></li>
                 <li><a class="nav-link" href="/modpacks">Modpacks</a></li>
-                <li><a class="nav-link" href="/contact">Contact</a></li>
+                <li><a class="nav-link active" href="/contact">Contact</a></li>
             </ul>
             <i class="fa-solid fa-bars mobile-menu-toggle"></i>
         </nav>
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
+        <section class="contact-page">
+            <div class="contact-hero">
+                <h1>Get In Touch</h1>
+                <p class="contact-tagline">I'd love to hear from you! Whether you have questions, collaboration ideas, or just want to say hello.</p>
             </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
+            <div class="contact-content">
+
+                <div class="contact-info-section">
+                    <h2>Ways to Connect</h2>
+                    <div class="contact-cards">
+                        <div class="contact-card">
+                            <i class="fa-solid fa-envelope contact-icon"></i>
+                            <h3>Email</h3>
+                            <p>contact@kentuckyhawk.com</p>
+                            <a href="mailto:contact@kentuckyhawk.com" class="contact-link-btn">Send Email</a>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
+                        <div class="contact-card">
+                            <i class="fa-brands fa-mastodon contact-icon"></i>
+                            <h3>Mastodon</h3>
+                            <p>@Thunderhawk_Gamingv</p>
+                            <a href="https://mastodon.online/@Thunderhawk_Gamingv" target="_blank" class="contact-link-btn">Follow on Mastodon</a>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
+                        <div class="contact-card">
+                            <i class="fa-brands fa-pixelfed contact-icon"></i>
+                            <h3>Pixelfed</h3>
+                            <p>/thunderhawk</p>
+                            <a href="https://pixelfed.social/thunderhawk" target="_blank" class="contact-link-btn">Follow on Pixelfed</a>
                         </div>
+                        <div class="contact-card">
+                            <i class="fa-brands fa-youtube contact-icon"></i>
+                            <h3>YouTube</h3>
+                            <p>@KentuckyHawk</p>
+                            <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="contact-link-btn">Subscribe on YouTube</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="collaboration-section">
+                    <h2>Collaboration Inquiries</h2>
+                    <p>I'm always open to exciting collaboration opportunities! Whether you're a brand, fellow creator, or have an innovative idea, let's create something amazing together.</p>
+                    <div class="collab-types">
+                        <div class="collab-item">
+                            <i class="fa-solid fa-handshake collab-icon"></i>
+                            <h4>Sponserships</h4>
+                        </div>
+                        <div class="collab-item">
+                            <i class="fa-solid fa-video collab-icon"></i>
+                            <h4>Video Collaborations</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="response-time">
+                    <h2>Response Time</h2>
+                    <p>I typically respond to messages within 24-48 hours. For collaboration inquiries, please allow up to 3 business days for a detailed response.</p>
+                    <div class="response-notice">
+                        <span class="notice-icon">💡</span>
+                        <p>Check my social media for the fastest responses!</p>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
     </main>
 
         <footer class="footer">
@@ -146,6 +154,7 @@
 
   </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
