--- a/meta.html
+++ b/meta.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>KentuckyHawk - Site Meta</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/meta"/>
+    <meta property="og:title" content="KentuckyHawk - Site Meta"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/meta"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="alternate" href="https://kentuckyhawk.com/meta" hreflang="x-default"/>
+    <meta name="description" content="This is just miscellaneous page for basic stats and other miscellaneous information about the site.">
+    <meta property="og:description" content="This is just miscellaneous page for basic stats and other miscellaneous information about the site.">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <nav>
             <a href="/" class="logo">
@@ -31,7 +31,7 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link" href="/">Home</a></li>
                 <li><a class="nav-link" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
                 <li><a class="nav-link" href="/projects">Projects</a></li>
@@ -42,62 +42,76 @@
         </nav>
     </header>
 
-    <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
-            </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
+<main class="meta-page">
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <section class="hero-meta">
+        <div class="hero-content">
+            <h1>Site Meta</h1>
+            <p>Everything you need to know about the behind the site.</p>
+        </div>
+        <div class="hero-image">
+            <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="KentuckyHawk logo">
+        </div>
+    </section>
 
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
+    <section class="about">
+        <h2>Quick Facts</h2>
+        <div class="stats">
+            <div class="stat">
+                <span class="stat-number">12-30-25</span>
+                <span style="color: white;" class="stat-label">Build date</span>
             </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
+            <div class="stat">
+                <span class="stat-number" id="last-updated">1-13-26</span>
+                <span style="color: white;"  class="stat-label">Last Updated</span>
+            </div>
+            <div class="stat">
+                <span class="stat-number" id="version">2026.1</span>
+                <span style="color: white;"  class="stat-label">Current Version</span>
+            </div>
+            <div class="stat">
+                <span class="stat-number" id="posts-count">1</span>
+                <span style="color: white;"  class="stat-label">Blog Posts</span>
+            </div>
+        </div>
+    </section>
 
-    </main>
+    <section class="videos">
+        <h2>Recent Changelog</h2>
+        <ul class="change-log" style="padding:0;">
+            <h3>2026.1</h3>
+            <li>
+                <p>Updated Index</p>
+                <p>Updated script.js</p>
+                <p>Updated styles.css</p>
+                <p>Added Contact</p>
+                <p>Added Blog</p>
+                <p>Added About</p>
+                <p>Added 404</p>
+                <p>Added Meta</p>
+                <p>Added Modpacks</p>
+                <p>Added Privacy</p>
+                <p>Added Projects</p>
+                <p>Added robots.txt</p>
+                <p>Added sitemap.xml</p>
+                <p>Added ATS Modpack</p>
+                <p>Added ETS2 Modpack</p>
+                <p>Added Blog Post "Welcome to the new site!"</p>
+                <p>Added countless Images</p>
+            </li>
+        </ul>
+    </section>
+
+    <section class="about">
+        <h2>Roadmap</h2>
+        <blockquote class="trello-board-compact">
+          <a href="https://trello.com/b/6LEXiden/kentuckyhawk">Trello Board</a>
+        </blockquote>
+        <script src="https://p.trellocdn.com/embed.min.js"></script>
+
+    </section>
+
+</main>
 
         <footer class="footer">
   <div class="footer-container">
@@ -147,6 +161,5 @@
   </div>
 </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
