--- a/privacy.html
+++ b/privacy.html
@@ -3,102 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>KentuckyHawk - Privacy Policy</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/privacy"/>
+    <meta property="og:title" content="KentuckyHawk - Privacy Policy"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/privacy"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/privacy" hreflang="x-default"/>
+    <meta name="description" content="This page features our privacy policy which discloses what information we collect and what we do with it.">
+    <meta property="og:description" content="This page features our privacy policy which discloses what information we collect and what we do with it.">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="/" class="logo">
-            <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="KentuckyHawk logo" class="logo-icon">
-              KentuckyHawk
-            </a>
-            <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
-                <li><a class="nav-link" href="/about">About</a></li>    
-                <li><a class="nav-link" href="/blog">Blog</a></li>
-                <li><a class="nav-link" href="/projects">Projects</a></li>
-                <li><a class="nav-link" href="/modpacks">Modpacks</a></li>
-                <li><a class="nav-link" href="/contact">Contact</a></li>
-            </ul>
-            <i class="fa-solid fa-bars mobile-menu-toggle"></i>
-        </nav>
-    </header>
 
-    <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
-            </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
-
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
-    </main>
-
+<body class="privacy-wrapper">
+<h1 id="privacy-policy">Privacy Policy</h1>
+<p>I take your privacy seriously. To better protect your privacy, I provide this privacy policy notice explaining the way your personal information is collected and used.</p>
+<h2 id="collection-of-routine-information">Collection of Routine Information</h2>
+<p>This website track basic information about their visitors. This information includes, but is not limited to, IP addresses, browser details, timestamps and referring pages. None of this information can personally identify specific visitors to this website. The information is tracked for routine administration and maintenance purposes.</p>
+<h2 id="cookies">Cookies</h2>
+<p>Where necessary, this website uses cookies to store information about a visitor’s preferences and history in order to better serve the visitor and/or present the visitor with customized content.</p>
+<h2 id="advertisement-and-other-third-parties">Advertisement and Other Third Parties</h2>
+<p>Advertising partners and other third parties may use cookies, scripts and/or web beacons to track visitors activities on this website in order to display advertisements and other useful information. Such tracking is done directly by the third parties through their own servers and is subject to their own privacy policies. This website has no access or control over these cookies, scripts and/or web beacons that may be used by third parties. Learn how to <a href="https://www.google.com/privacy_ads">opt out of Google’s cookie usage</a>.</p>
+<h2 id="links-to-third-party-websites">Links to Third Party Websites</h2>
+<p>I have included links on this website for your use and reference. I am not responsible for the privacy policies on these websites. You should be aware that the privacy policies of these websites may differ from my own.</p>
+<h2 id="security">Security</h2>
+<p>The security of your personal information is important to me, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While I strive to use commercially acceptable means to protect your personal information, I cannot guarantee its absolute security.</p>
+<h2 id="changes-to-this-privacy-policy">Changes To This Privacy Policy</h2>
+<p> This Privacy Policy is effective as of 1/x/26 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
+<p>I reserve the right to update or change my Privacy Policy at any time, and you should check this Privacy Policy periodically. If I make any material changes to this Privacy Policy, I will notify you either through the email address you have provided me, or by placing a prominent notice on my website.</p>
+<h2 id="contact-information">Contact Information</h2>
+<p>For any questions or concerns regarding the privacy policy, please email me at contact@kentuckyhawk.com.</p>
+</body>
         <footer class="footer">
   <div class="footer-container">
 
@@ -146,7 +90,3 @@
 
   </div>
 </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
