--- a/projects.html
+++ b/projects.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>Projects - KentuckyHawk</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/projects"/>
+    <meta property="og:title" content="Projects - KentuckyHawk"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/projects"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/projects" hreflang="x-default"/>
+    <meta name="description" content="This page contains all the projects I am currently working on or worked on in the past.">
+    <meta property="og:description" content="This page contains all the projects I am currently working on or worked on in the past.">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header>
@@ -31,10 +32,10 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link" href="/">Home</a></li>
                 <li><a class="nav-link" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
-                <li><a class="nav-link" href="/projects">Projects</a></li>
+                <li><a class="nav-link active" href="/projects">Projects</a></li>
                 <li><a class="nav-link" href="/modpacks">Modpacks</a></li>
                 <li><a class="nav-link" href="/contact">Contact</a></li>
             </ul>
@@ -43,60 +44,83 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
+        <section class="projects-page">
+            <div class="projects-header">
+                <h1>Projects</h1>
+                <p>Cool things I've been working on</p>
             </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="https://static.wixstatic.com/media/2d311a_ee5f8ba4f0cc41b9a8b79691de5b8e77~mv2.jpg" alt="Starlight Community Network banner made by Clonn.">
+                    <div class="project-content">
+                        <h3>Starlight Community Network</h3>
+                        <p>A 6-year ongoing project trying to unite people and creating new standards for Discord or Discord like platform communities.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Discord</span>
+                            <span class="tech-tag">Community</span>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
+                        <div class="project-links">
+                            <a href="https://discord.starlightcommunity.network" class="project-link pri">Invite</a>
+                             <a href="https://github.com/Starlight-Community-Network" class="project-link sec">Github</a>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="assets/Screenshot_20260113_161003.png" alt="Project thumbnail">
+                    <div class="project-content">
+                        <h3>Codename: HarmonyHub</h3>
+                        <p>The initial Website for Starlight Community Network.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">Wix</span>
+                            <span class="tech-tag">Close-Source</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://web.archive.org/web/20240811123015/https://www.starlightgaming.network/" class="project-link pri">Visit</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="assets/Screenshot_20260113_161844.png" alt="Project thumbnail">
+                    <div class="project-content">
+                        <h3>Codename: HarmonyHub V2</h3>
+                        <p>The Latest W.I.P iteration of the Starlight Community Network Site.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">Open-Source</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://starlightcommunity.network" class="project-link pri">Visit</a>
+                            <a href="https://github.com/Starlight-Community-Network/starlight-community-network.github.io/" class="project-link sec">Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="/assets/Screenshot_20260113_093626.png" alt="Project thumbnail">
+                    <div class="project-content">
+                        <h3>KentuckyHawk Site</h3>
+                        <p>The Website your on now!</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">Open-Source</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/KentuckyHawk/kentuckyhawk.github.io" class="project-link sec">Code</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
     </main>
 
         <footer class="footer">
@@ -146,6 +170,7 @@
 
   </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
