--- a/modpacks.html
+++ b/modpacks.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>Modpacks - KentuckyHawk</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/modpacks"/>
+    <meta property="og:title" content="Modpacks - KentuckyHawk"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/modpacks"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/modpacks" hreflang="x-default"/>
+    <meta name="description" content="Curious about the mods I use in my videos? Well, here they are.">
+    <meta property="og:description" content="Curious about the mods I use in my videos? Well, here they are.">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-</head>
 <body>
     <header>
         <nav>
@@ -31,11 +30,11 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link" href="/">Home</a></li>
                 <li><a class="nav-link" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
                 <li><a class="nav-link" href="/projects">Projects</a></li>
-                <li><a class="nav-link" href="/modpacks">Modpacks</a></li>
+                <li><a class="nav-link active" href="/modspacks">Modpacks</a></li>
                 <li><a class="nav-link" href="/contact">Contact</a></li>
             </ul>
             <i class="fa-solid fa-bars mobile-menu-toggle"></i>
@@ -43,61 +42,43 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
+        <section class="mods-page">
+            <div class="mods-header">
+                <h1>Modpacks</h1>
+                <p>Download the mods I use in my videos</p>
             </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
+            <div class="mods-grid">
+                <div class="mod-item">
+                    <img src="/assets/ats_20240525_023806_00.png" alt="Modpack thumbnail" class="mod-thumbnail">
+                    <div class="mod-info">
+                        <h3>American Truck Simulator Modpack</h3>
+                        <p>A pack of mods that i've been using when recording/streaming American Truck Simulator.</p>
+                        <div class="mod-meta">
+                            <span>Updated on 1/3/26</span>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
+                        <div class="mod-links">
+                            <a href="/modpacks/ats" class="mod-link download">Download</a>
                         </div>
                     </div>
                 </div>
+
+                <div class="mod-item">
+                    <img src="/assets/ets2_20240601_064722_00.png" alt="Mod thumbnail" class="mod-thumbnail">
+                    <div class="mod-info">
+                        <h3>Euro Truck Simulator 2 Modpack</h3>
+                        <p>A pack of mods that i've been using when recording/streaming American Truck Simulator.</p>
+                        <div class="mod-meta">
+                            <span>Updated on 1/3/26</span>
+                        </div>
+                        <div class="mod-links">
+                            <a href="/modpacks/ets2" class="mod-link download">Download</a>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
-    </main>
 
         <footer class="footer">
   <div class="footer-container">
@@ -146,6 +127,7 @@
 
   </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
