--- a/modpacks/ets2.html
+++ b/modpacks/ets2.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KentuckyHawk - SE Content Creator</title>
+    <title>ETS2 Mod Pack - KentuckyHawk</title>
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png">
-    <link rel="canonical" href="https://kentuckyhawk.com"/>
-    <meta property="og:title" content="KentuckyHawk - SE Content Creator"/>
+    <link rel="canonical" href="https://kentuckyhawk.com/modpacks/ets2"/>
+    <meta property="og:title" content="ETS2 Mod Pack - KentuckyHawk"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
     <meta property="og:image" content="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png"/>
-    <meta property="og:url" content="https://kentuckyhawk.com"/>
+    <meta property="og:url" content="https://kentuckyhawk.com/modpacks/ets2"/>
     <meta property="og:site_name" content="KentuckyHawk"/>
     <meta property="og:type" content="website"/>
     <meta name="theme-color" content="#ffb300"/>
-    <link rel="alternate" href="https://kentuckyhawk.com" hreflang="x-default"/>
-    <meta name="description" content="This is the official website for KentuckyHawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
-    <meta property="og:description" content="This is the official website for Kentucky Hawk, where you can find tons of content from me, including blog posts, you can also see all my latest videos, and some other miscellaneous stuff.">
+    <link rel="alternate" href="https://kentuckyhawk.com/modpacks/ets2" hreflang="x-default"/>
+    <meta name="description" content="This mod pack features the mod used in all my videos and live streams of Euro Truck Simulator 2 featuring brand new trucks to drive and a new soundscape.">
+    <meta property="og:description" content="This mod pack features the mod used in all my videos and live streams of Euro Truck Simulator 2 featuring brand new trucks to drive and a new soundscape.">
     <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
               KentuckyHawk
             </a>
             <ul class="nav-links">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link" href="/">Home</a></li>
                 <li><a class="nav-link" href="/about">About</a></li>    
                 <li><a class="nav-link" href="/blog">Blog</a></li>
                 <li><a class="nav-link" href="/projects">Projects</a></li>
@@ -43,60 +43,74 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img class="hero-bg" src="/assets/6916089f-7f16-4f25-8f60-5b7e25af4718.jpg" alt="Starlight Community Network banner made by Clonn.">
-            <div class="hero-content">
-                <h1>Welcome to KentuckyHawk</h1>
-                <p>Where realism and fun come together.</p>
-                <a href="https://www.youtube.com/@KentuckyHawk" target="_blank" class="cta-button">
-                    <span>▶</span> Subscribe on YouTube
-                </a>
+        <article class="mod-pack-detail">
+            <div class="mod-pack-header">
+                <img src="/assets/ets2_20240601_064722_00.png" alt="Mod pack hero image" class="mod-pack-hero">
+                <div class="mod-pack-meta">
+                    <span class="mod-version">1/3/26</span>
+                </div>
+                <h1>ETS2 Mod Pack</h1>
+                <p class="mod-pack-excerpt">A pack of mods that i've been using when recording/streaming Euro Truck Simulator 2.</p>
+                <div class="mod-pack-actions">
+                    <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3638980252" class="download-btn">Download Now</a>
+                </div>
             </div>
-            <div class="hero-image">
-                <img src="https://static.wixstatic.com/media/af0f76_796440f4f4944bc7a3e137ccad72cd57~mv2.png" alt="Channel Profile">
-            </div>
-        </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Howdy, its KentuckyHawk, I like editing videos, play games. Getting to know people, and listening to music, so far I've been doing YouTube for 9 years (I can't believe it), also I plan on playing a lot of games like ATS, ETS2, Roblox, BeamNG.Drive, Flashing Lights, Maybe even some shooter games, And more to come!</p>
-                    <div class="stats">
-                        <div class="stat">
-                            <span class="stat-number">200+</span>
-                            <span class="stat-label-home">Subscribers</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">11</span>
-                            <span class="stat-label-home">Videos</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">34K+</span>
-                            <span class="stat-label-home">Views</span>
-                        </div>
+            <div class="mod-pack-content">
+                <h2>About This Mod Pack</h2>
+                <p>This mod pack features the mod used in all my videos and live streams of Euro Truck Simulator 2 featuring brand new trucks to drive and a new soundscape. </p>
+
+                <h3 id="external-mods">External Mods</h3>
+                <p>This section for mods I can't shove in the modpack and that you have to download yourself.</p>
+                <ul>
+                    <li><a href="https://forum.scssoft.com/viewtopic.php?t=287769">SCS Truck Sounds Reworked MEGAPACK</a> by R.J Productions</li>
+                    <li><a href="https://www.zeemods.com/p/zeemods-audio-framework-plugin/">Zeemods Audio Framework</a> by Zeemods </li>
+                    <li><a href="https://www.zeemods.com/p/master-reverb-effects-mod/">Master Reverb Effects Mod</a> by Zeemods </li>
+                    <li><a href="https://www.zeemods.com/p/wind-tire-trailer-effects-mod/">Wind, Tire & Trailer Effects Mod</a> by Zeemods</li>
+                    <li><a href="https://www.zeemods.com/p/weather-sound-and-effect-mod/">Weather Sound & Effect Mod</a> by Zeemods </li>
+                    <li><a href="https://www.zeemods.com/p/gps-voice-mod/">GPS Voice Mod</a> by Zeemods</li>
+                    <li><a href="https://forum.scssoft.com/viewtopic.php?t=265242">Daniels ETS2 Random Events</a> by Daniels Mods</li>
+
+                </ul>
+
+                <h3>Installation Instructions</h3>
+                <ol>
+                    <li>Subcribe to the collection and Download the mods External mods linked above</li>
+                    <li>Locate your mod folder</li>
+                    <li>Copy the downloaded file to the appropriate location</li>
+                    <li>Launch the game and enable the mods</li>
+                </ol>
+
+                <h3>Installation Location</h3>
+                <ol>
+                    <li>\Documents\Euro Truck Simulator 2\mod</li>
+                    <li>if you use -homedir launch parameter then it changes where your mod folder is so please refer to what you set in that parameter</li>
+                </ol>
+
+                <h3>Compatibility</h3>
+                <ul>
+                    <li>Compatible with Game Version 1.56+ and above <i> (your mileage may vary)</i></li>
+                </ul>
+
+                <h3>Support</h3>
+                <p>This mod pack is provied as it is. I will not provide support for this mod pack if it breaks or damages your game then it is your responsibility. If you're having issue with a particular mod, please contact its mod author to help.</p>
+            </div>
+
+            <footer class="mod-pack-footer">
+                <div class="mod-pack-tags">
+                    <span class="tag">ETS2</span>
+                    <span class="tag">Steam Workshop</span>
+                    <span class="tag">External Mods</span>
+                </div>
+
+                <div class="mod-pack-navigation">
+                    <a href="mods" class="back-to-mods">← Back to All Mod Packs</a>
+                    <div class="pack-nav">
+                        <a href="/modpacks/ats" class="prev-pack">Previous Pack</a>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <section id="videos" class="videos">
-            <h2>Latest Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="/assets/jklkhgfkldghlkdmklghndkfnhldnl.jpg" alt="Video 1">
-                    <h3>FNW39 | 39 Does Not Want Christmas (Nights 1,2,3)</h3>
-                    <p>Oh boy! 39 is back for Christmas.</p>
-                </div>
-                <div class="video-card">
-                    <img src="/assets/klhjksdhjfhdjkfsk.jpg" alt="Video 2">
-                    <h3>FNW39 | This Stressed Me Out (Nights 4,5,6)</h3>
-                    <p>This was probably the most stressful video.</p>
-                </div>
-            </div>
-            <a href="https://www.youtube.com/@KentuckyHawk/videos" target="_blank" class="view-all-button">View All Videos</a>
-        </section>
-
+            </footer>
+        </article>
     </main>
 
         <footer class="footer">
@@ -146,6 +160,7 @@
 
   </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
